--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "iview": "^2.0.0-rc.19",
+    "jointjs": "^1.1.0",
+    "jquery": "^3.2.1",
     "mongoose": "^4.11.3",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
