--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "iview": "^2.0.0-rc.19",
     "jointjs": "^1.1.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.3",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
